better quality in images fixed the align-center when showing results

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
-html,body{
-    color: white;
-    height: 100vh;
+body{
+    color: floralwhite;
+    height: calc(100vh - 100px);
+    flex: auto;
 }
 .bgImg{
     background-image: url('../assets/buenosAires2.jpg');
